# pytest_send_email

./: .flake8  .gitignore  msg.md  pyproject.toml  robot.py  自动发送测试结果.docx
src/pytest_send_email/: plugin.py
