[project]
name = "pytest-send-email"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "自动发送", email = "dcy4725@163.com"},
]
dependencies = [
    "pytest>=8.2.1",
    "requests>=2.32.3"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir="src"

[tool.isort]
profile="black"
multi_line_output=3
[tool.black]
exclude='''
/(
  \.git
| \.hg
| \.tox
| venv
| buck-out
| build
| dist
)/
'''
[tool.pdm.scripts]
check={composite=["isort .","black .","flake8 ."]}
test="pytest"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]
[project.entry-points.pytest11]
result_log="pytest_send_email.plugin"

